fix: improved readability from **othe**fuc** website

--- a/assets/stylesheets/defaults.css
+++ b/assets/stylesheets/defaults.css
@@ -1,11 +1,19 @@
-body{
-    margin:40px auto;
-    max-width:650px;
-    line-height:1.6;
-    font-size:18px;
-    color:#444;
-    padding:0 10px
+body {
+    margin: 5% auto; 
+    background: #f2f2f2; 
+    color: #444444; 
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
+    font-size: 16px; 
+    line-height: 1.8; 
+    text-shadow: 0 1px 0 #ffffff; 
+    max-width: 73%;
 }
-h1,h2,h3{
-    line-height:1.2
+a {
+    border-bottom: 1px solid #444444; 
+    color: #444444; 
+    text-decoration: none;
 }
+a:hover {
+    border-bottom: 0;
+}
+        
